Stretch: navigation fixed

--- a/css/index.css
+++ b/css/index.css
@@ -173,6 +173,8 @@ p {
   }
 }
 nav {
+  position: sticky;
+  top: 0px;
   width: 100%;
   background-color: #F6F6F6;
   padding-top: 1rem;
@@ -194,13 +196,20 @@ nav section ul {
   justify-content: center;
 }
 nav section ul li {
-  padding: 1rem;
-}
-nav section ul li a {
   font-size: 1.6rem;
   line-height: 1.4;
+}
+nav section ul li a {
+  padding: 1rem;
+  display: inline-block;
+  width: 100%;
   text-decoration: none;
   color: #454A59;
+  transition: background-color 0.5s, color 0.5s;
+}
+nav section ul li a:hover {
+  background-color: #454A59;
+  color: #F6F6F6;
 }
 footer {
   color: #22283B;
@@ -285,6 +294,15 @@ footer {
   text-align: center;
   align-items: center;
   font-size: 1.75rem;
+  transition: background-color 0.5s, color 0.5s;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: white;
+  color: #22283A;
+}
+.home .walk .walk-text .btn:hover {
+  color: #22283A;
+  background-color: white;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
