--- a/less/mixins.less
+++ b/less/mixins.less
@@ -30,3 +30,11 @@
     text-decoration: none;
     color:@font-color;
 }
+
+.animation(@background-color, @color){
+    transition: background-color .5s, color .5s;
+    &:hover{
+        background-color:@background-color;
+        color:@color;
+    }
+}
