--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,7 @@
 // Navigation code here
 nav{
+    position: sticky;
+    top:0px;
     width:100%;
     background-color: @nav-bg;
     padding-top: 1rem;
@@ -14,10 +16,13 @@ nav{
             .flex();
             justify-content: center;
             li{
-                padding:1rem;
+                .font-set();
                 a{
-                    .font-set();
+                    padding:1rem;
+                    display: inline-block;
+                    width: 100%;
                     .text-flatten(@nav-font);
+                    .animation(@nav-font, @nav-bg);
                 }
             }
         }
